gitlab/gitlab-stack_build_prod_preprod_registry.yml
AWSTemplateFormatVersion: '2010-09-09' 
Metadata:
  License: Apache-2.0
Description: 'AWS CloudFormation Sample Template EC2InstanceWithSecurityGroupSample:
  Create an Amazon EC2 instance running the Amazon Linux AMI. The AMI is chosen based
  on the region in which the stack is run. This example creates an EC2 security group
  for the instance to give you SSH access. **WARNING** This template creates an Amazon
  EC2 instance. You will be billed for the AWS resources used if you create a stack
  from this template.'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
    Default: devops
  
  
  InstanceTypeGitLab:
    Description: GitLab EC2 instance type
    Type: String
    Default: t2.medium
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge,
      t3.nano, t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge,
      m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge, m4.10xlarge,
      m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge,
      c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge,
      g3.8xlarge,
      r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r3.12xlarge,
      i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge,
      d2.xlarge, d2.2xlarge, d2.4xlarge, d2.8xlarge]
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

  InstanceTypeRemoteServerGitlab:
    Description: Remote server EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large, t2.xlarge, t2.2xlarge,
      t3.nano, t3.micro, t3.small, t3.medium, t3.large, t3.xlarge, t3.2xlarge,
      m4.large, m4.xlarge, m4.2xlarge, m4.4xlarge, m4.10xlarge,
      m5.large, m5.xlarge, m5.2xlarge, m5.4xlarge,
      c5.large, c5.xlarge, c5.2xlarge, c5.4xlarge, c5.9xlarge,
      g3.8xlarge,
      r5.large, r5.xlarge, r5.2xlarge, r5.4xlarge, r3.12xlarge,
      i3.xlarge, i3.2xlarge, i3.4xlarge, i3.8xlarge,
      d2.xlarge, d2.2xlarge, d2.4xlarge, d2.8xlarge]
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  GitLabServer:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'GitLabServer'
      InstanceType: !Ref 'InstanceTypeGitLab'
      SecurityGroups: [!Ref 'InstanceSecurityGroupGitlabServer']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-003f19e0e687de1cd'
      UserData:
        'Fn::Base64': !Join
          - ''
          - - !Sub |
              #!/bin/sh
              echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" >> /etc/apt/sources.list
              apt-get update
              apt-get -y install dirmngr --install-recommends
              apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 93C4A3FD7BB9C367
              apt update
              apt -y install ansible

              # retrieve ansible code
              apt -y install git
              git clone https://github.com/diranetafen/cursus-devops.git
              cd cursus-devops/ansible
              ansible-galaxy install -r roles/requirements.yml
              ansible-playbook install_docker.yml
              usermod -aG docker admin
              
              # Desactivate ssh timer
              sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
              sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
              sudo systemctl restart sshd
                                        
              #before install gitlab-ci we get the punlic dns
            - |
              GITLAB_EXTERNAL_HOSTNAME=`curl http://169.254.169.254/latest/meta-data/public-hostname`
              ansible-playbook install_gitlab_ci.yml --extra-var "gitlab_external_hostname=${GITLAB_EXTERNAL_HOSTNAME}"
 
  InstanceSecurityGroupGitlabServer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
       - Key: Name
         Value: 'Rules GitLabServer'
      GroupDescription: Enable SSH access via port 22, 80 and 443
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: !Ref 'SSHLocation'
  
  ServerCentosBuildGitlab:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'ServerCentosBuildGitlab'
      InstanceType: !Ref 'InstanceTypeRemoteServerGitlab'
      SecurityGroups: [!Ref 'InstanceSecurityGroupServerBuildGitlab']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0083662ba17882949'
      UserData:
        'Fn::Base64':
          !Sub |
            #!/bin/bash
          
            # Desactivate ssh timer
            sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
            sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
            sudo systemctl restart sshd
          
            # Activate line numer editor vim
            sudo echo 'set nocompatible' > ~/.vimrc
            sudo echo 'set number' >> ~/.vimrc

  InstanceSecurityGroupServerBuildGitlab:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
       - Key: Name
         Value: 'Security Rules for Build servers'
      GroupDescription: Enable SSH access via port 22 and 80
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'  
 
  ServerCentosPreprodGitlab:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'ServerCentosPreprodGitlab'
      InstanceType: !Ref 'InstanceTypeRemoteServerGitlab'
      SecurityGroups: [!Ref 'InstanceSecurityGroupServerDeploymentGitlab']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0083662ba17882949'
      UserData:
        'Fn::Base64':
          !Sub |
            #!/bin/bash
          
            # Desactivate ssh timer
            sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
            sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
            sudo systemctl restart sshd
          
            # Activate line numer editor vim
            sudo echo 'set nocompatible' > ~/.vimrc
            sudo echo 'set number' >> ~/.vimrc
 
  ServerCentosProductionGitlab:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'ServerCentosProductionGitlab'
      InstanceType: !Ref 'InstanceTypeRemoteServerGitlab'
      SecurityGroups: [!Ref 'InstanceSecurityGroupServerDeploymentGitlab']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0083662ba17882949'
      UserData:
        'Fn::Base64':
          !Sub |
            #!/bin/bash
            
            # Desactivate ssh timer
            sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
            sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
            sudo systemctl restart sshd
          
            # Activate line number editor vim
            sudo echo 'set nocompatible' > ~/.vimrc
            sudo echo 'set number' >> ~/.vimrc
   
  InstanceSecurityGroupServerDeploymentGitlab:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
       - Key: Name
         Value: 'Security Rules for PreProd and Production servers'
      GroupDescription: Enable SSH access via port 22,80 and 8181
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 8181
        ToPort: 8181
        CidrIp: !Ref 'SSHLocation'

  ServerCentosRegistryGitlab:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
       - Key: Name
         Value: 'ServerCentosRegistryGitlab'
      InstanceType: !Ref 'InstanceTypeRemoteServerGitlab'
      SecurityGroups: [!Ref 'InstanceSecurityGroupRegistryGitlab']
      KeyName: !Ref 'KeyName'
      ImageId: 'ami-0083662ba17882949'
      UserData:
        'Fn::Base64':
          !Sub |
            #!/bin/bash
            
            # Desactivate ssh timer
            sudo echo 'ClientAliveInterval 4' >> /etc/ssh/sshd_config
            sudo echo 'ClientAliveCountMax 22' >> /etc/ssh/sshd_config
            sudo systemctl restart sshd
          
            # Activate line number editor vim
            sudo echo 'set nocompatible' > ~/.vimrc
            sudo echo 'set number' >> ~/.vimrc
            
            yum -y update
            yum -y install epel-release
            
            # install ansible
            yum -y install ansible

            # retrieve ansible code
            yum -y install git
            git clone https://github.com/diranetafen/cursus-devops.git
            cd cursus-devops/ansible
            ansible-galaxy install -r roles/requirements.yml
            ansible-playbook install_docker.yml
            sudo usermod -aG docker centos
            
            #create registry 
            docker network create registry
            docker run -d -p 5000:5000 --net registry --name registry-samiamr registry:2
            docker run -d --net registry -p 4002:80 -e REGISTRY_URL=http://registry-samiamr:5000 -e DELETE_IMAGES=true -e REGISTRY_TITLE="Registry Sami AMOURA" joxit/docker-registry-ui:static
            docker pull samiamr/fake-backend:JenkinsCICD
            docker tag samiamr/fake-backend:JenkinsCICD localhost:5000/fake-backend:JenkinsCICD
            docker push localhost:5000/fake-backend:JenkinsCICD
           
            
                           
  InstanceSecurityGroupRegistryGitlab:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
       - Key: Name
         Value: 'Security Rules for PreProd and Production servers'
      GroupDescription: Enable SSH access via port 22,80,4001,4002 et 5000
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 5000
        ToPort: 5000
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 4002
        ToPort: 4002
        CidrIp: !Ref 'SSHLocation'

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref 'GitLabServer'
    Value: !Ref 'ServerCentosBuildGitlab'
    Value: !Ref 'ServerCentosPreprodGitlab'
    Value: !Ref 'ServerCentosProductionGitlab'
    Value: !Ref 'ServerCentosRegistryGitlab'
  AZ:
    Description: Availability Zone of the newly created EC2 instance
    Value: !GetAtt [GitLabServer, AvailabilityZone]
    Value: !GetAtt [ServerCentosBuildGitlab, AvailabilityZone]
    Value: !GetAtt [ServerCentosPreprodGitlab, AvailabilityZone]
    Value: !GetAtt [ServerCentosProductionGitlab, AvailabilityZone]
    Value: !GetAtt [ServerCentosRegistryGitlab, AvailabilityZone]
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt [GitLabServer, PublicDnsName]
    Value: !GetAtt [ServerCentosBuildGitlab, PublicDnsName]
    Value: !GetAtt [ServerCentosPreprodGitlab, PublicDnsName]
    Value: !GetAtt [ServerCentosProductionGitlab, PublicDnsName]
    Value: !GetAtt [ServerCentosRegistryGitlab, PublicDnsName]
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt [GitLabServer, PublicIp]
    Value: !GetAtt [ServerCentosBuildGitlab, PublicIp]
    Value: !GetAtt [ServerCentosPreprodGitlab, PublicIp]
    Value: !GetAtt [ServerCentosProductionGitlab, PublicIp]
    Value: !GetAtt [ServerCentosRegistryGitlab, PublicIp]
